# layton

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  text_detector.py
src/app/: app.py
src/text_handler/: text_replacer.py
