[tool.poetry]
name = "layton"
version = "0.1.0"
description = "Detect & replace text in images as desired."
authors = ["binhnguyen00 <jackjack2000.kahp@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "58.1.0"
numpy = "^2.0.2"
opencv-python-headless = "^4.10.0.84"
packaging = "^24.1"
pillow = "^10.4.0"
pytesseract = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"